[project]
name = "ghtrack"
version = "0.1.0"
description = "See recent GitHub activity and Contribution Graph in your shell."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
ghtrack = "ghtrack.cli:main"

[tool.setuptools.packages.find]
include = ["ghtrack*"]